--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <input name="login" id="login" class="btn btn-block login-btn" type="button" value="Login">
             </form>
             <a href="#!" class="forgot-password-link">Forgot password?</a>
-            <p class="login-wrapper-footer-text">Don't have an account? <a href="#!" class="text-reset">Register here</a></p>
+            <p class="login-wrapper-footer-text">Don't have an account? <a href="Signup.html" class="text-reset">Register here</a></p>
             <p class="login-wrapper-footer-text1">Disclaimer: The NXVC Master Intake Process (MIP) allows users to voluntarily provide personal information. This information will help NXVC to determine which programs and processes you may be eligible for and can help you save time in several applications. All information provided is protected and not sold to third parties. If you have any comments, questions, or concerns, please reach out to <a href="cs.mip@nxvc.net" class="text-reset">cs.mip@nxvc.net</a></p>
           </div>
         </div>
