--- a/Signup.html
+++ b/Signup.html
@@ -133,7 +133,7 @@
 			</div>
               <input name="login" id="login" class="btn btn-block login-btn" type="button" value="Submit">
             </form>
-           
+           <a href="dashboard.html">click here to view dashboard</a>
           </div>
         </div>
         
